# lagrangian

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.claude/: settings.local.json
docs/sources/: categorical-cheminformatics-models.tex  flux-phenomena.tex  harmonic-molecular-resonator.tex  ideal-gas-laws.tex  molecular-harmonic-resonator.tex  ray-tracing-cellular-computing.tex  shader-depth-minimisation.tex  trajectory-completion.tex
publication/emergent-light-field/: emergent-light-field.tex  references.bib
publication/emergent-light-field/figures/: field-captions.tex
publication/emergent-light-field/python/: pyproject.toml
publication/emergent-light-field/python/src/emergent_light/: __init__.py  cli.py  membrane.py  plots.py  validation.py
publication/harmonic-scattering-loop-coupling/: harmonic-scattering-loop-coupling-map.tex  references.bib
publication/harmonic-scattering-loop-coupling/figures/: loop-captions.tex
publication/harmonic-scattering-loop-coupling/python/: README.md  pyproject.toml
publication/harmonic-scattering-loop-coupling/python/src/loop_coupling/: __init__.py  cli.py  graph.py  plots.py  transfer.py  validation.py
publication/shader-based-astronomy/: README.md  references.bib  shader-based-astronomy.tex
publication/shader-based-astronomy/figures/: shader-captions.tex
publication/shader-based-astronomy/python/: README.md  pyproject.toml
publication/shader-based-astronomy/python/src/shader_astronomy/: __init__.py  cli.py  coords.py  passes.py  plots.py  validation.py
publication/shader-based-astronomy/python/tests/: test_coords.py  test_passes.py  test_validation.py
publication/shader-based-astronomy/rust/: Cargo.toml  README.md
publication/shader-based-astronomy/rust/benches/: pipeline.rs
publication/shader-based-astronomy/rust/examples/: render.rs
publication/shader-based-astronomy/rust/src/: coords.rs  lib.rs  passes.rs  pipeline.rs  validation.rs
publication/shader-based-astronomy/rust/src/shaders/: pass0_terrain.wgsl  pass2_position.wgsl
publication/shader-based-astronomy/rust/tests/: validation.rs
publication/universal-partition-depth-observatory/: .gitignore  README.md  references.bib  universal-partition-depth-observatory.tex
publication/universal-partition-depth-observatory/figures/: universal-captions.tex
publication/universal-partition-depth-observatory/python/: pyproject.toml
publication/universal-partition-depth-observatory/python/src/gthree/: __init__.py  cli.py  composition.py  plots.py  routes.py  validation.py
web/: README.md  package-lock.json  package.json  tsconfig.json
web/public/shaders/: pass1_weather.wgsl  pass3_light.wgsl  pass4_render.wgsl
web/src/components/: Footer.js  InstrumentChrome.js  JupiterModel.js  Logo.js  Navbar.js
web/src/components/instruments/: AtmosphereCanvas.js  Globe.js  LightMembrane.js  LoopCouplingDemo.js  MoonInstrument.js  ObservablesChart.js  PlanetInstrument.js  SkySurvey.js  SolarSystem.js  StackedFluidInstrument.js  VelaInstrument.js
web/src/lib/: celestial-sky.js  celestial.js  light-membrane.js  loop-coupling.js
web/src/pages/: 404.js  _app.js  _document.js  about.js  documentation.js  index.js
web/src/pages/instruments/: atmosphere.js  earth.js  index.js  jupiter.js  light-membrane.js  liquid-mirror.js  loop-coupling.js  mars.js  mercury.js  moon.js  neptune.js  saturn.js  sky-survey.js  solar-system.js  uranus.js  vela.js  venus.js
